--- a/src/output.css
+++ b/src/output.css
@@ -636,6 +636,10 @@ video {
   bottom: 2.5rem;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .bottom-8 {
   bottom: 2rem;
 }
@@ -772,8 +776,16 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
 .col-span-6 {
   grid-column: span 6 / span 6;
+}
+
+.col-span-7 {
+  grid-column: span 7 / span 7;
 }
 
 .mx-2 {
@@ -998,6 +1010,10 @@ video {
   height: 0.375rem;
 }
 
+.h-1\/3 {
+  height: 33.333333%;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1082,6 +1098,10 @@ video {
   min-height: 3rem;
 }
 
+.min-h-\[200px\] {
+  min-height: 200px;
+}
+
 .min-h-\[80vh\] {
   min-height: 80vh;
 }
@@ -1108,6 +1128,10 @@ video {
 
 .w-28 {
   width: 7rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-4 {
@@ -1489,6 +1513,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2\.5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.625rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.625rem * var(--tw-space-y-reverse));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1756,6 +1786,11 @@ video {
   border-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .border-x-black {
   --tw-border-opacity: 1;
   border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -1952,6 +1987,11 @@ video {
   background-color: rgb(172 185 186 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#b8c26b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(184 194 107 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f7fafb\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 250 251 / var(--tw-bg-opacity));
@@ -1960,6 +2000,18 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
+}
+
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
+}
+
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
 }
 
 .bg-black\/40 {
@@ -2003,6 +2055,11 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.bg-lime-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(190 242 100 / var(--tw-bg-opacity));
+}
+
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
@@ -2022,12 +2079,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-\[\#01a0e9\] {
@@ -2057,6 +2123,12 @@ video {
 .from-\[\#ffb800\] {
   --tw-gradient-from: #ffb800 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 184 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-black\/60 {
+  --tw-gradient-from: rgb(0 0 0 / 0.6) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -2261,6 +2333,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-11 {
+  padding-top: 2.75rem;
+  padding-bottom: 2.75rem;
+}
+
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -2371,6 +2448,10 @@ video {
   padding-left: 0px;
 }
 
+.pl-24 {
+  padding-left: 6rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -2449,6 +2530,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.font-lime-light {
+  font-family: Limelight, sans-serif;
 }
 
 .text-2xl {
@@ -2610,6 +2695,11 @@ video {
   color: rgb(72 72 77 / var(--tw-text-opacity));
 }
 
+.text-\[\#5a5957\] {
+  --tw-text-opacity: 1;
+  color: rgb(90 89 87 / var(--tw-text-opacity));
+}
+
 .text-\[\#6B6A64\] {
   --tw-text-opacity: 1;
   color: rgb(107 106 100 / var(--tw-text-opacity));
@@ -2623,6 +2713,11 @@ video {
 .text-\[\#7A7A7A\] {
   --tw-text-opacity: 1;
   color: rgb(122 122 122 / var(--tw-text-opacity));
+}
+
+.text-\[\#939b56\] {
+  --tw-text-opacity: 1;
+  color: rgb(147 155 86 / var(--tw-text-opacity));
 }
 
 .text-\[\#EF9787\] {
@@ -2688,6 +2783,11 @@ video {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -3152,6 +3252,17 @@ video {
 .hover\:shadow-orange-300:hover {
   --tw-shadow-color: #fdba74;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:ring-2:hover {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.hover\:ring-white:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
 
 .focus\:border-none:focus {
